# rensa

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
cli/src/display/: mod.rs
cli/src/scan/: mod.rs
core/: Cargo.toml
core/src/: cache.rs  error.rs  http.rs  lib.rs  osv.rs  plugin.rs  report.rs  scanner.rs  version.rs
core/src/types/: constraint.rs  dependency.rs  ecosystem.rs  mod.rs  update.rs  vulnerability.rs
plugins/composer/: Cargo.toml
plugins/composer/src/: detector.rs  lib.rs  osv.rs  parser.rs  plugin.rs  registry.rs  scanner.rs
