[workspace]
members = [
    "core",
    "cli",
    "plugins/composer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zepzeper/rensa"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
serde_yaml = "0.9"
async-trait = "0.1"
semver = "1.0"
walkdir = "2"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
colored = "2"
