[package]
name = "rensa-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[dependencies.rensa-core]
path = "../core"

[features]
default = ["composer"]
composer = ["dep:rensa-plugin-composer"]

[dev-dependencies]
tempfile = "3"

[dependencies.rensa-plugin-composer]
path = "../plugins/composer"
optional = true
