[package]
name = "rensa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
semver.workspace = true
walkdir.workspace = true
tempfile.workspace = true
schemars = "0.8"
regex = "1"
chrono = { version = "0.4.43", features = ["serde"] }

[dev-dependencies]
tokio.workspace = true
