[package]
name = "rensa-plugin-composer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rensa-core = { path = "../../core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
semver.workspace = true
walkdir = "2"

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
